# livraria-djangoRF

./: db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_livro_autores.py
core/models/: __init__.py  livro.py
core/serializers/: __init__.py  livro.py
core/views/: __init__.py  autor.py  livro.py
livraria/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
