[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["gabriel04alves <gabriel52.alves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
djangorestframework-simplejwt = "^5.2.2"
python-magic = "^0.4.27"
pillow = "^9.3.0"
drf-spectacular = "^0.24.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
